2003-08-14  Tor Lillqvist  <tml@iki.fi>

	Some nitpicking changes for Win32:

	* libart-features.h.in: Declare the variables from the library as
	dlimport/dllexport on Win32.

	* Makefile.am: Don't use -lm on Win32. Use the libart.def file.

	* makefile.msc: Update to generate same name DLL and import
	library as auto* and libtool. Add missing objects. (But dunno if
	it is useful to maintain this file. It isn't distributed in the
	source tarballs (should it be?). And, if it were distributed, and
	the intention was to support random people really building libart
	with MSVC, one should distribute also prebuilt config.h(.win32)
	and libart-features.h(.win32) files.)

	* libart-zip.in (DEVZIP): Fix typo.
	(DLLDIR): libtool 1.5 installs DLLs in $(prefix)/bin, so look
	there, too.

	* libart.def: Add missing entry points.

	* testuta.c: To check that the export/import of the version
	variables work, print out them in a comment. Undefine
	LIBART_COMPILATION before including libart-features.h.

2003-08-08  Alexander Larsson  <alexl@redhat.com>

	* configure.in: 2.3.14

Fri Jul 25 12:29:35 2003  George Lebl <jirka@5z.com>

	* art_render_gradient.c (art_render_gradient_linear_render_8)
	  (art_render_gradient_linear_render) (art_render_gradient_linear)
	  (art_render_gradient_radial_render) (art_render_gradient_radial):
	  Redo the checks where float was compared by == or != to using
	  the EPSILON define.  Also copy the ArtGradientLinear and
	  ArtGradientRadial into the source structure, pretending that
	  these are constants that will never change or be freed by
	  the caller is utterly evil and in fact for librsvg it is
	  not constant.  This fixes some more very random crashes
	  when using librsvg with libart (which seems to be the
	  only usage of the gradient stuff)

Fri Jul 18 12:57:36 2003  George Lebl <jirka@5z.com>

	* art_render_gradient.c: Fix more comparison-of-doubles by == bugs,
	  this code is uber ugly.  Should fix the fairly random crashes